Correct gap:

--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -29,7 +29,7 @@
     transition: opacity 0.6s ease;
     padding: 40px 40px;
     text-align: center;
-    gap: 15px;
+    gap: 20px;
     cursor: pointer;
   }
 
